@@ -1,3 +1,5 @@
+- add subtitles and nfo files to media collection objects and assign these MEDIA_VIDEO_HELPER file type
+- improvement: for downloadGeneralFile, move up the file check before the web call
 - fix: strm creation not inserting 'http://' at the start #57
 v0.1.22 (2018-05-18)
 - implemented: Scheduling STRM support non-catalog structures #45
